--- a/c++.html
+++ b/c++.html
@@ -77,7 +77,7 @@
 	<footer style="background-color: #3a3f46; color: white; padding: 5px 15px 15px 15px">
 		<p class="text-center" style="margin: 0px; font-size: 150%">Contatos:</p>
 		<a class="text-decoration-none text-reset" href="mailto: lucheta.deds@outlook.com?subject=Me interresei pelo seu trabalho">
-		 E-mail: lucheta.deds@outlook.com 
+		 E-mail: lucheta.deds@protonmail.com 
 		</a>
         <br>
 		<a href="https://www.linkedin.com/in/andre-lucheta-49b7071b9" class="text-decoration-none text-reset linkedin">
