correção de envio

--- a/sobremim.html
+++ b/sobremim.html
@@ -80,7 +80,7 @@
 <!--RODAPÉ-->
 	<footer style="background-color: #3a3f46; color: white; padding: 5px 15px 15px 15px">
 		<p class="text-center" style="margin: 0px; font-size: 150%">Contatos:</p>
-		<a class="text-decoration-none text-reset" href="mailto: lucheta.deds@outlook.com?subject=Me interresei pelo seu trabalho">
+		<a class="text-decoration-none text-reset" href="mailto: lucheta.deds@protonmail.com?subject=Me interresei pelo seu trabalho">
 			E-mail: lucheta.deds@protonmail.com 
 		</a>
         <br>
